@@ -1,1 +1,1 @@
-1.8.13.0-rc2
+1.8.13.0
